# grid_and_place

./: .gitignore  README.md  model.py  pyproject.toml  train.py
configs/: co_emergence.yaml  co_emergence_clear_gc.yaml
rtgym/: __init__.py  dataclasses.py  rtgym.py
rtgym/agent/: __init__.py  agent.py  control.py  neurons.py  smc.py  utils.py
rtgym/arena/: __init__.py  arena.py  arena_shapes.py
runs/paper/co_emergence/: config.yaml
runs/paper/co_emergence_clear_gc/: config.yaml
utils/: misc.py  ratemap_aggregator.py
utils/analyze/: compute_autocorr.py
