[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grip"
version = "0.0.0"
description = "Co-emergence of grid cells and place cells."
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "ipython>=9.6.0",
    "numpy>=2.3.4",
    "hydra-core>=1.3.2",
    "plotly>=6.4.0",
    "scipy>=1.16.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["grip*"]

[tool.black]
line-length = 88
target-version = ["py311"]
